--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "booksearch",
+  "name": "ecommerce",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://appbaseio-apps.github.io/booksearch",
